--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 .label {
     display: block;
 }
@@ -22,6 +25,9 @@
     margin: 10px 0 0 0;
     padding: 10px;
     overflow-y: auto;
+}
+.messages__message {
+    list-style: none;
 }
 .messages__my-message {
     color: white;
